# openedx-sso-gateway

./: pyproject.toml  tutor_plugin.py
sso_gateway/: __init__.py  apps.py  pipeline.py  tutor_plugin.py  urls.py  views.py
sso_gateway/templates/sso_gateway/: error.html
